devops/kubernetes/manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filespider-ingress
  namespace: project-filespider 
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - filespider.k8s.aravindweb.com
    secretName: wildcard-k8s-aravindweb-com-tls
  rules:
  - host: "filespider.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: gatewayservice
              port:
                number: 80
